--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>後台</h1>
-	<%= render 'shared/navbar' %>
+	<%= render 'shared/navbar', line_number: 3 %>
 	<%= yield %>
 </body>
 </html>
