--- a/app/views/pages/math.html.erb
+++ b/app/views/pages/math.html.erb
@@ -3,3 +3,10 @@
 		<li><%= i %></li>
 	<% end %>
 </ul>
+
+
+<% a = 1 %> <!-- 執行但不顯示 -->
+<% b = 1 %>
+<%# c = 1 %> <!-- 不執行也不顯示 -->
+<h1> <%= a + b %> </h1> <!-- 顯示3 -->
+<h1> <%%=  a + b %></h1> <!-- 不執行但拿掉一個%後顯示 -->	
