--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,17 @@
 <ul>
+
+	 	
 	<%= nav_li "首頁", root_path %>
 	<%= nav_li "關於", about_path %>
 	<%= nav_li "樂透", math_path %>
-<!-- 	<li><a href="<%= root_path %>">首頁</a></li>
-	<li><a href="<%= about_path %>">關於</a></li>
-	<li><a href="<%= math_path %>">樂透</a></li>
- -->
+	
+
+	<!-- 正規的rails 寫法 -->
+	<!--
+	<li><%= link_to '首頁', root_path %></li>
+	<li><%= link_to '關於', about_path %></li>
+	<li><%= link_to '樂透', math_path %></li>
+	-->
  </ul>
 
 <% line_number.times do %>
