--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,12 +10,22 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_self
- *= require_tree .
- *
+ = require more 
+ 
+ = require_tree admin_all
+ = require_self
+ 
  */
-
-li.active {
+ h1 {
+ 	/*font-size: 20px;*/
+ 	color: red 
+ul .active  {
 	font-size: 200%;
 	color: red;
+
+	font-size: 200%;
+	color: red;
+}
+ul > li {
+	display: inline-block;
 }
