--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,7 +9,13 @@
 	<%= text_area_tag :content %> <br>
 	<!-- <textarea name="content"></textarea> -->
 
-
 	<input type="submit">
 
+<% end %>
+
+
+<%= form_for @post do |f| %>
+<%= f.text_field :title %>
+<%= f.text_area :content %>
+<%= f.submit %>
 <% end %>
